# manolo-wp2

./: .gitignore  README.md  manolo_library_demo.py  manolo_library_test.py  pyproject.toml  setup.py  temp_pyproject.toml
.github/workflows/: test.yml
dockerfiles/manolo_Data-Tier/: README.md
dockerfiles/manolo_Data-Tier/manolo_prometheus/: README.md
dockerfiles/manolo_Data-Tier/manolo_thanos/: README.md
dockerfiles/manolo_node/: README.md
manolo/base/api/: README.md
manolo/base/data/: cifar.py  cifar10.py  data_loader.py  dataset_utils.py  datasets_gan.py  mnist.py
manolo/base/data/manolo-data-tier/: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.yml  vscleanup.bat
manolo/base/data/manolo-data-tier/ManoloDataTier.Api/: .README  ManoloDataTier.Api.csproj  Program.cs
manolo/base/data/manolo-data-tier/ManoloDataTier.Api/Configs/: logging.Development.json
manolo/base/data/manolo-data-tier/ManoloDataTier.Common/: IEntity.cs  ManoloDataTier.Common.csproj
manolo/base/data/manolo-data-tier/ManoloDataTier.Logic/: ManoloDataTier.Logic.csproj
manolo/base/data/manolo-data-tier/ManoloDataTier.Logic/Domains/: Result.cs
manolo/base/data/manolo-data-tier/ManoloDataTier.Logic/Extensions/: DynamicTableService.cs  LoggingExtensions.cs
manolo/base/data/manolo-data-tier/ManoloDataTier.Logic/Services/: DatabaseHelpers.cs  IdResolverService.cs  MlflowService.cs
manolo/base/data/manolo-data-tier/ManoloDataTier.Storage/: ManoloDataTier.Storage.csproj
manolo/base/data/manolo-data-tier/ManoloDataTier.Storage/Dto/: MlflowDto.cs
manolo/base/data/manolo-data-tier/tools/: db.sh  ef.bat
manolo/base/data/mlflow/: Dockerfile  runme.sh
manolo/base/data/python_wrapper/: README.md  pyproject.toml  requirements.txt
manolo/base/data/python_wrapper/manolo_client/: client.py
manolo/base/data/python_wrapper/manolo_client/core/: auth.py  encryption.py  file_utils.py  http_utils.py  logger.py  metadata.py
manolo/base/data/python_wrapper/manolo_client/demo/: 1_demo_upload.py  2.1_demo_in_memory_download.py  2.2_demo_local_download_signalr.py  2_demo_local_download.py  3.1_demo_mlflow_datatier_id.py  3.2_demo_mlflow_relations_mlflow_id.py  3.3_demo_mlflow_relations_datatier_id.py  3_demo_mlflow_mlflow_id.py  4_demo_topology.py  complete_demo_encrypted.py  complete_demo_unencrypted.py
manolo/base/data/python_wrapper/manolo_client/enums/: ManifestKeys.py
manolo/base/data/python_wrapper/manolo_client/helpers/: generic_helpers.py  mlflow_helpers.py
manolo/base/data/python_wrapper/manolo_client/modules/: alias.py  datastructure.py  item.py  kvp.py  predicate.py  relation.py
manolo/base/data/service/: .dockerignore  Dockerfile  ManoloDataTier.sln  docker-compose.yml
manolo/base/data/service/ManoloDataTier.Api/: Dockerfile  ManoloDataTier.Api.csproj  Program.cs
manolo/base/data/service/ManoloDataTier.Common/: Generator.cs
manolo/base/data/service/mlflow/: Dockerfile  requirements.txt
manolo/base/data/service/tools/: ef.sh
manolo/base/metrics/: Accuracy.py  code_carbon_utils.py  parameter_counter.py
manolo/base/models/: DemoModel.py  ResNet.py  cinn_models.py  gan_models.py  network_initializer.py
manolo/base/utils/: data_synth_utils.py  evaluation_utils.py  feat_utils.py  file_utils.py  logger_utils.py
manolo/base/wrappers/: __init__.py  codecarbon.py  fastapi.py  mlflow.py  numpy.py  optimum.py  other_packages.py  pytorch.py  torchvision.py  versions_file.txt
manolo/data/: converter.py  data_synthesis.py  feature_eval.py  feature_extraction.py
manolo/data/converter/: README.md  pyproject.toml
manolo/data/converter/converter/: __init__.py  main.py
manolo/data/data_synthesis/: feature_eval.py  feature_extraction.py
manolo/data/loaders/torch_loader/: pyproject.toml
manolo/data/loaders/torch_loader/torch_loader/: __init__.py  shared.py  tabular.py  utils.py
manolo/data/noise_detection/attn_ae/attn_ae/: api.py
manolo/data/noise_detection/classif/classif/: api.py
manolo/data/noise_detection/conv_lstm_ae/conv_lstm_ae/: api.py  infer.py  model.py
manolo/data/noise_detection/lstm_ae/: pyproject.toml
manolo/data/noise_detection/lstm_ae/lstm_ae/: api.py  infer.py
manolo/data/noise_detection/predictor/predictor/: api.py  model.py
manolo/data/other/converter/: pyproject.toml
manolo/data/other/converter/converter/: main.py
manolo/data/other/loaders/sklearn_loader/: pyproject.toml
manolo/data/other/loaders/sklearn_loader/sklearn_loader/: main.py  shared.py  tabular.py
manolo/data/other/loaders/torch_loader/: README.md  pyproject.toml
manolo/data/quality/attn_ae/: pyproject.toml
manolo/data/quality/attn_ae/attn_ae/: api.py  estimate.py  infer.py  model.py  train.py  utils.py
manolo/data/quality/attn_ae/testcases/: dummy.py  dummy_rest.py  test_datatier.py
manolo/data/quality/classif/: pyproject.toml
manolo/data/quality/classif/classif/: api.py  estimate.py  infer.py  metrics.py  model.py  train.py  utils.py
manolo/data/quality/conv_lstm_ae/: pyproject.toml
manolo/data/quality/conv_lstm_ae/conv_lstm_ae/: api.py  infer.py  train.py  utils.py
manolo/data/quality/lstm_ae/: pyproject.toml
manolo/data/quality/lstm_ae/lstm_ae/: estimate.py  infer.py  metrics.py  model.py  train.py  utils.py
manolo/data/quality/mne_filter/: pyproject.toml
manolo/data/quality/mne_filter/mne_filter/: __init__.py  api.py  estimate.py  infer.py  metrics.py  model.py  utils.py
manolo/data/quality/other/converter/converter/: utils.py
manolo/data/quality/other/loaders/torch_loader/: pyproject.toml
manolo/data/quality/other/loaders/torch_loader/torch_loader/: main.py  shared.py
manolo/data/quality/predictor/: pyproject.toml
manolo/data/quality/predictor/predictor/: __init__.py  api.py  estimate.py  infer.py  metrics.py  train.py
manolo/data/synth/: data_synthesis.py  feature_eval.py  feature_extraction.py  feature_extraction_utils.py
tester/: pyproject.toml
tester/task_2_3/: module_data_synthesis_vision_cinn.py  module_data_synthesis_vision_gans.py  module_feature_test.py
tester/tester/: bitbrain-conv.py  bitbrain-load.py
(+221 files in other folders)
