[tool.poetry]
name = "manolo"
version = "0.1.0"
description = "MANOLO EU Project - Trustworthy Efficient AI for Cloud-Edge Computing"
authors = ["Hristo Stoev <hristo.stoev@ucd.ie>", "Cristian Bosch <cristian.boschserrano@ucd.ie>", "Eric Arazo <eric.arazo@ucd.ie>", "Andrés L. Suárez-Cetrulo <andres.suarez-cetrulo@ucd.ie>", "Ricardo Simón-Carbajo <ricardo.simoncarbajo@ucd.ie>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
