[project]
name = "manolo-client"
version = "0.1.0"
description = "A Python Wrapper for the Manolo Data Tier API"
authors = [{ name = "garopoulos", email = "garopoulos@arx.net" }]
requires-python = ">=3.9"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "pycryptodome (>=3.23.0,<4.0.0)",
    "numpy (>=1.22,<1.25)",
    "torch (>=1.11.0)",
    "typer (>=0.16.0,<0.17.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
