[tool.poetry]
name = "manolo_client"
version = "1.0"
packages = [ { include = "manolo_client" } ]
description = "Python wrapper for MANOLO Data Tier"
authors = [ "George Garopoulos <garopoulos@arx.net>" ]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"

niquests = "==3.15.1"
pycryptodome = "==3.23.0"
signalrcore = "==0.9.5"
filetype = "==1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
