[tool.poetry]
name = "attn_ae"
version = "0.62"
packages = [
    { include = "attn_ae" }
]
description = "Attention-based Autoencoder"
authors = [ "Natalia Koliou <nataliakoliou@iit.demokritos.gr>",
            "Stasinos Konstantopoulos <konstant@iit.demokritos.gr>" ]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"

numpy = "^1.26"
torch = {version = "^2.7.0+cpu", source = "pytorch_cpu"}

fastapi = "^0.115.0"
uvicorn = "^0.23.2"

#my-package = {path = "../../../base/data/python_wrapper", develop = true}
manolo_client = {path = "../../../base/data/python_wrapper"}

[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
api = "attn_ae.api:setup"
