[tool.poetry]
name = "attn_ae"
version = "0.83"
packages = [
    { include = "attn_ae" }
]
description = "Attention-based Autoencoder"
authors = [ "Natalia Koliou <nataliakoliou@iit.demokritos.gr>",
            "Stasinos Konstantopoulos <konstant@iit.demokritos.gr>" ]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.14"    
numpy = "^1.26"
torch = "^2.7.0"
fastapi = "^0.115.0"
uvicorn = "^0.23.2"

converter = { path = "../../other/converter", develop = true }
torch_loader = { path = "../../other/loaders/torch_loader/", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
api = "attn_ae.api:setup"
dummy = "testcases.dummy:main"
