[tool.poetry]
name = "classif"
version = "0.26"
packages = [
    { include = "classif" }
]
description = "Classifier"
authors = [ "Natalia Koliou <nataliakoliou@iit.demokritos.gr>",
	        "Stasinos Konstantopoulos <konstant@iit.demokritos.gr>" ]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.14"    
torch = "^2.7.0" 
scikit-learn = "^1.3.0"
fastapi = "^0.115.0"
uvicorn = "^0.23.2"
numpy = "^1.26"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
api = "classif.api:setup"