[tool.poetry]
name = "sklearn_loader"
version = "0.9"
packages = [
    { include = "sklearn_loader" }
]
description = "Sklearn Loader"
authors = [ "Natalia Koliou <nataliakoliou@iit.demokritos.gr>",
	        "Stasinos Konstantopoulos <konstant@iit.demokritos.gr>" ]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.14"  
numpy = "^1.26"
scikit-learn = "^1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"